added maps keys

--- a/_includes/find-way.html
+++ b/_includes/find-way.html
@@ -44,7 +44,7 @@
                 </li>
             </ul>
             <div class="clearfix"></div>
-            <a href="https://maps.googleapis.com/maps/api/js?key={{ site.apke }}&ll={{ site.eventPlaceCoordinates | replace:' ',''}}&z=17&t=m&hl=en-US&gl=US&mapclient=embed&q={{ site.eventStreetAddress | replace:' ','%20' | replace:',','%2C'}}%2C%20{{ site.eventAddressLocality | replace:' ','%20' | replace:',','%2C'}}" class="view-on-map" target="_blank">{{ site.viewOnMap }}</a>
+            <a href="https://www.google.com/maps/embed/v1/MODE?key=AIzaSyDhfa5nD42QQJcUkYpbnO4boao5h6hfSvQ&ll={{ site.eventPlaceCoordinates | replace:' ',''}}&z=17&t=m&hl=en-US&gl=US&mapclient=embed&q={{ site.eventStreetAddress | replace:' ','%20' | replace:',','%2C'}}%2C%20{{ site.eventAddressLocality | replace:' ','%20' | replace:',','%2C'}}" class="view-on-map" target="_blank">{{ site.viewOnMap }}</a>
         </div>
     </div>
 </section>
