--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -49,7 +49,7 @@
                 </div>
                 {% endfor %}
             </div> 
-            <a href="https://www.eventbrite.com/e/innagine-2019-tickets-56968595603" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Buy Tickets</a>
+            <a href="https://www.eventbrite.com/e/innagine-2019-tickets-56968595603" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Register for Tickets</a>
         </div>
     </div>
 </section>
