added agenda and updated pics

--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -8,7 +8,7 @@
         <h4>PlugIn@BLK71</h4>
         <h5>71 Ayer Rajah Crescent, 02-01, 139951</h5>
         <h5>Near One-North MRT</h5>
-        <h5><a href="https://goo.gl/maps/EtN1mDX5BJv" target="blank">Direction to the Workshop Venue</a></h5>
+        <h5><a href="https://goo.gl/maps/EtN1mDX5BJv" target="blank">Direction to the Venue</a></h5>
         <br/>
             
         {% for day in site.data.workshop %}
