--- a/_includes/venue.html
+++ b/_includes/venue.html
@@ -8,7 +8,7 @@
             <h5>2 Kallang Sector</h5>
             <h5>Singapore - 349277</h5>
             <h5>Near Potong Pasir MRT</h5>
-            <h5><a href="https://goo.gl/maps/EtN1mDX5BJv" target="blank">Direction to the Workshop Venue</a></h5>
+            <h5><a href="https://goo.gl/maps/EtN1mDX5BJv" target="blank">Direction to the Venue</a></h5>
             <br/>
             <div class="row venue-row">
                 <div class="col-md-8 col-sm-8 venue-col">
